<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
-->
    <item
        android:id="@+id/navigation_tags"
        android:icon="@drawable/ic_loyalty_black_24dp"
        android:title="@string/title_tags" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_pie_chart_outlined_black_24dp"
        android:title="@string/title_data" />
    <!--

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
    -->

</menu>
