<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn-update-note"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparency"
        android:contentDescription="@string/btn_descriptor_save_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save_black_24dp" />

    <ImageButton
        android:id="@+id/btn-add-note2"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_note_blue_24" />

    <TextView
        android:id="@+id/txt-note-headline2"
        style="@style/AddTradeNotMandatoryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/note_headline"
        app:layout_constraintBottom_toBottomOf="@+id/btn-add-note2"
        app:layout_constraintStart_toEndOf="@+id/btn-add-note2"
        app:layout_constraintTop_toTopOf="@+id/btn-add-note2" />

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_note"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textAutoComplete|textCapWords"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn-add-note2" />

</androidx.constraintlayout.widget.ConstraintLayout>