<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn-back-home"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparency"
        android:contentDescription="@string/btn_descriptor_back_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

    <ImageButton
        android:id="@+id/btn-save-trade2"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparency"
        android:contentDescription="@string/btn_descriptor_save_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save_black_24dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btn-save-trade2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn-back-home"
        app:layout_constraintTop_toBottomOf="@+id/btn-save-trade2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit-txt-add-trade-label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit-txt-add-trade-label" />

            <EditText
                android:id="@+id/edit-txt-add-trade-amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />


            <ImageButton
                android:id="@+id/btn-select-date-trade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit-txt-add-trade-amount"
                app:srcCompat="@drawable/ic_date_range_black_24dp"
                tools:layout_conversion_absoluteHeight="43dp"
                tools:layout_conversion_absoluteWidth="71dp" />

            <TextView
                android:id="@+id/txt-date-trade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/btn-select-date-trade"
                app:layout_constraintStart_toEndOf="@+id/btn-select-date-trade"
                app:layout_constraintTop_toTopOf="@+id/btn-select-date-trade"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="83dp" />


            <ImageButton
                android:id="@+id/btn-select-tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn-select-date-trade"
                app:srcCompat="@drawable/ic_loyalty_black_24dp"
                tools:layout_conversion_absoluteHeight="43dp"
                tools:layout_conversion_absoluteWidth="48dp" />

            <TextView
                android:id="@+id/txt-tag-trade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_a_tag"
                app:layout_constraintBottom_toBottomOf="@+id/btn-select-tag"
                app:layout_constraintStart_toEndOf="@+id/btn-select-tag"
                app:layout_constraintTop_toBottomOf="@+id/btn-select-date-trade"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="59dp" />

            <Spinner
                android:id="@+id/spinner_trade_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/tag_type"
                app:layout_constraintBottom_toBottomOf="@+id/txt-date-trade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt-date-trade"
                tools:layout_conversion_absoluteHeight="43dp"
                tools:layout_conversion_absoluteWidth="48dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraitLayoutSecondary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutPrimary">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn-add-note"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_marginTop="16dp"
                    android:background="@color/transparency"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_note_blue_24" />

                <TextView
                    android:id="@+id/txt-note-headline"
                    style="@style/AddTradeNotMandatoryInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_headline"
                    app:layout_constraintStart_toEndOf="@+id/btn-add-note"
                    app:layout_constraintTop_toTopOf="@+id/btn-add-note" />

                <TextView
                    android:id="@+id/txt-add-trade-note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn-add-note"
                    app:layout_constraintTop_toBottomOf="@+id/txt-note-headline" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
